--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Seitsemän veljestä</h1>
     <h3>Ensimmäinen luku</h3>
     <p>
-        Jukolan talo, eteläisessä Hämeessä, seisoo erään mäen pohjoisella rinteellä, liki Toukolan
-        kylää.
+        <b>Jukolan</b> talo, eteläisessä <i>Hämeessä</i>, seisoo erään mäen pohjoisella rinteellä,
+        liki <b><i>Toukolan kylää</i></b>.
     </p>
     <p>
         Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin
