--- a/index.html
+++ b/index.html
@@ -2,22 +2,42 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>Lapio website</title>
+  <meta charset="utf-8">
+  <title>Lapio website</title>
 </head>
 
 <body>
-    <h1>Seitsemän veljestä</h1>
-    <h3>Ensimmäinen luku</h3>
-    <p>
-        <b>Jukolan</b> talo, eteläisessä <i>Hämeessä</i>, seisoo erään mäen pohjoisella rinteellä,
-        liki <b><i>Toukolan kylää</i></b>.
-    </p>
-    <p>
-        Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin
-        talo oli häviöön mennyt, aaltoili teräinen vilja.
-    </p>
-    <em>jatkuu..</em>
+  <h1>Seitsemän veljestä</h1>
+  <h2>Tärkeät päähenkilöt</h2>
+  <ul>
+      <li>Päähenkilöt</li>
+      <ul>
+          <li>Juhani</li>
+          <li>Tuomas</li>
+          <li>Aapo</li>
+          <li>Simeoni</li>
+          <li>Timo</li>
+          <li>Lauri</li>
+          <li>Eero</li>
+      </ul>
+      <li>Sivuhenkilöt</li>
+      <ul>
+          <li>Männistön Venla</li>
+          <li>Lukkari</li>
+          <li>Tammiston Kyösti</li>
+      </ul>
+  </ul>
+
+  <h3>Ensimmäinen luku</h3>
+  <p>
+    <b>Jukolan</b> talo, eteläisessä <i>Hämeessä</i>, seisoo erään mäen pohjoisella rinteellä,
+    liki <b><i>Toukolan kylää</i></b>.
+  </p>
+  <p>
+    Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin
+    talo oli häviöön mennyt, aaltoili teräinen vilja.
+  </p>
+  <em>jatkuu..</em>
 </body>
 
 </html>
