Osa 3. Viides tehtävä

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 <body>
   <h1>Seitsemän veljestä</h1>
-  <h2>Tärkeät päähenkilöt</h2>
+  <!-- Kuva Seitsemän veljestä -kirjan ensimmäisestä sivusta -->
+  <img src="assets/Seitsemän_veljestä.png" alt="Seitsemän veljestä -kirjan sivu" width="240">
+
+  <h2>Tärkeät henkilöt</h2>
   <ul>
       <li>Päähenkilöt</li>
       <ul>
