--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <a href="aleksis-kivi.html">Aleksis Kivi</a>
   <h1>Seitsemän veljestä</h1>
   <!-- Kuva Seitsemän veljestä -kirjan ensimmäisestä sivusta -->
   <img src="assets/Seitsemän_veljestä.png" alt="Seitsemän veljestä -kirjan sivu" width="240">
