Osa 3. Kahdeksas tehtävä

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <a href="aleksis-kivi.html">Aleksis Kivi</a>
-  <h1>Seitsemän veljestä</h1>
+  <h1 class="paaotsikko">Seitsemän veljestä</h1>
   <!-- Kuva Seitsemän veljestä -kirjan ensimmäisestä sivusta -->
   <img src="assets/Seitsemän_veljestä.png" alt="Seitsemän veljestä -kirjan sivu" width="240">
 
@@ -42,7 +42,7 @@
     Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin
     talo oli häviöön mennyt, aaltoili teräinen vilja.
   </p>
-  <em>jatkuu..</em>
+  <em id="punainen-kohta">jatkuu..</em>
 </body>
 
 </html>
