--- a/index.html
+++ b/index.html
@@ -35,14 +35,36 @@
 
   <h3>Ensimmäinen luku</h3>
   <p>
-    <b>Jukolan</b> talo, eteläisessä <i>Hämeessä</i>, seisoo erään mäen pohjoisella rinteellä,
-    liki <b><i>Toukolan kylää</i></b>.
+    Jukolan talo, eteläisessä Hämeessä, seisoo erään mäen pohjaisella
+    rinteellä, liki Toukolan kylää. Sen läheisin ympäristö on kivinen
+    tanner, mutta alempana alkaa pellot, joissa, ennenkuin talo oli häviöön
+    mennyt, aaltoili teräinen vilja. Peltojen alla on niittu, apilaäyräinen,
+    halkileikkaama monipolvisen ojan; ja runsaasti antoi se heiniä,
+    ennenkuin joutui laitumeksi kylän karjalle. Muutoin on talolla avaria
+    metsiä, soita ja erämaita, jotka, tämän tilustan ensimmäisen perustajan
+    oivallisen toiminnan kautta, olivat langenneet sille osaksi jo ison-jaon
+    käydessä entisinä aikoina. Silloinpa Jukolan isäntä, pitäen enemmän
+    huolta jälkeentulevainsa edusta kuin omasta parhaastansa, otti vastaan
+    osaksensa kulon polttaman metsän ja sai sillä keinolla seitsemän vertaa
+    enemmän kuin toiset naapurinsa. Mutta kaikki kulovalkean jäljet olivat
+    jo kadonneet hänen piiristänsä ja tuuhea metsä kasvanut sijaan.--Ja tämä
+    on niiden seitsemän veljen koto, joiden elämänvaiheita tässä nyt käyn
+    kertoilemaan.
   </p>
   <p>
-    Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin
-    talo oli häviöön mennyt, aaltoili teräinen vilja.
+    Veljesten nimet vanhimmasta nuorimpaan ovat: Juhani, Tuomas, Aapo,
+    Simeoni, Timo, Lauri ja Eero. Ovat heistä Tuomas ja Aapo kaksoispari ja
+    samoin Timo ja Lauri. Juhanin, vanhimman veljen, ikä on kaksikymmentä ja
+    viisi vuotta, mutta Eero, nuorin heistä, on tuskin nähnyt
+    kahdeksantoista auringon kierrosta. Ruumiin vartalo heillä on tukeva ja
+    harteva, pituus kohtalainen, paitsi Eeron, joka vielä on kovin lyhyt.
+    Pisin heistä kaikista on Aapo, ehkä ei suinkaan hartevin. Tämä
+    jälkimmäinen etu ja kunnia on Tuomaan, joka oikein on kuuluisa
+    hartioittensa levyyden tähden. Omituisuus, joka heitä kaikkia yhteisesti
+    merkitsee, on heidän ruskea ihonsa ja kankea, hampunkarvainen tukkansa,
+    jonka karheus etenkin Juhanilla on silmään pistävä.
   </p>
-  <em id="punainen-kohta">jatkuu..</em>
+  <em>jatkuu..</em>
 </body>
 
 </html>
